--- a/pagina1.html
+++ b/pagina1.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> arquivo </title>
+    <link rel="stylesheet" href="./css/estilo.css" />
+    
 </head>
 <body>
-    <h1> pagina1  </h1>
+    <h1 class="page1">  pagina1  </h1>
     <a href="index.html"> voltar</a>
     <br>
 
