--- a/index.html
+++ b/index.html
@@ -17,15 +17,21 @@
     <h4>Cabeçalho 4</h4>
     <h5>Cabeçalho 5</h5>
     <h6>Cabeçalho 6</h6>
-<p>corinthians e o melhor time <br /> do mundo! </p>
-<p> qual seu time? </p>
+    
+<p class="maiusculo">corinthians é o melhor time <br /> do mundo! </p>
+<p class="maiusculo"> qual seu time? </p>
 
 <a href="http://www.w3schools.com" target="blank">w3schools</a>
 <br />
-<a href="pagina1.html">pagina1</a>
+<a href="pagina1.html">página1</a>
 <br>
-<a href="pages/pagina2.html">pagina2</a>
-
+<a href="pages/pagina2.html">página2</a>
+<br />
+<a href="pages/pagina3.html">página3</a>
+<br />
+<a href="pages/pagina4.html">Página4</a>
+<div>WhatsApp</div>
+<footer></footer>
 </body>
 
 </html>
