--- a/pages/pagina2.html
+++ b/pages/pagina2.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> site </title>
+    <title> Página 2 </title>
     <link rel="stylesheet" href="../css/estilo.css" />
 </head>
 <body>
-    <h1> pagina2 </h1>
+    <h1 class="page2"> pagina2 </h1>
     <a href="../index.html">voltar</a>
     <br>
-
-    <img src="../img/portaria.jpeg" alt="Cefetão" />
+<section>
+    <img src="../img/portaria.jpeg"  alt="Cefetão" />
     <br>
 
     <ol>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
+        <li>O Cefet e muito bom ou cefet e muito ruim</li>
+        <li>Escolha uma opção</li>
+        <li>Sei lá qual seja a resposta</li>
     </ol>
-
+</section>
 </body>
 </html>
