--- a/pages/pagina3.html
+++ b/pages/pagina3.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a href="../index.html">voltar </a>
+   
     <main class="grid">
         <article>
             Salve o corinthians, o campeão dos campeões!
@@ -33,7 +33,7 @@
 
         </article>
     </main>
-
+ <a id="baixo" href="../index.html">voltar </a>
 </body>
 
 </html>
