--- a/pages/pagina3.html
+++ b/pages/pagina3.html
@@ -33,7 +33,7 @@
 
         </article>
     </main>
- <a id="baixo" href="../index.html">voltar </a>
+ <a id="baixogit" href="../index.html">voltar </a>
 </body>
 
 </html>
